fixed white space that came out when nav bar is pulled out and screen is small

--- a/public/index.css
+++ b/public/index.css
@@ -6,8 +6,8 @@
 html, body {
     margin: 0;
     background: #1e1d1d;
-    /* height: 100%;
-    width: 100% */
+    /* height: 100%; */
+    width: 100vw 
 }
 
 main {
@@ -18,6 +18,7 @@ main {
     /* text-align: center; */
     background: #1e1d1d;
     height: 100%;
+    width: 100vw
 }
 
 #root {
